--- a/scripts/perl_updater/plugins_conf/dialogicopensessions.conf
+++ b/scripts/perl_updater/plugins_conf/dialogicopensessions.conf
@@ -1,4 +1,4 @@
+[Dialogic SIU]
 Number of outgoing open sessions in SIU
-SIU ID
-Number of open ActiveCalls for this SIU
 Number of incoming open sessions in SIU
+Number of open ActiveCalls for this SIU
