--- a/scripts/perl_updater/plugins_conf/rts.conf
+++ b/scripts/perl_updater/plugins_conf/rts.conf
@@ -2,22 +2,16 @@
 CallsPerMin
 [Calls DB Time]
 avgAuthorize
-avgAuthorizeBM
 avgAuthorizeProcess
 maxAuthorize
-maxAuthorizeBM
 maxAuthorizeProcess
 avgCallEnd
-avgCallEndBM
 avgCallEndProcess
 maxCallEnd
-maxCallEndBM
 maxCallEndProcess
 avgResolve
-avgResolveBM
 avgResolveProcess
 maxResolve
-maxResolveBM
 maxResolveProcess
 [Totals Received/Sent]
 Total Received
@@ -26,16 +20,23 @@ Total Sent
 avgDBQuery
 avgDBQueryProcess
 avgTaxationProcessTime
-ExpiredRequests
 maxDBQuery
 maxDBQueryProcess
 numOfTaxationCalls
 PendingAnswers
 PendingRequests
+ExpiredRequests
 [Memory:graph_args --base 1024:graph_scale yes]
 TotalMemory
 AvailMemory
-[BM]
+[Balance Manager Time]
+avgAuthorizeBM
+maxAuthorizeBM
+avgCallEndBM
+maxCallEndBM
+avgResolveBM
+maxResolveBM
+[Balance Manager]
 BM Avg debit prepare data
 BM Avg debit request process
 BM Avg debit request send
@@ -57,11 +58,4 @@ BM responses in last minute
 BM TotalQueuesSize
 BM unrecoverable errors in last minute
 [DBQueues]
-DBQueues_0
-DBQueues_1
-DBQueues_2
-DBQueues_3
-DBQueues_4
-DBQueues_5
-DBQueues_6
-DBQueues_7
+DBQueues_(.*)
